# cpp_advanced_features

./: .gitignore  README.md
examples/ex1/: Makefile  a.out  main.cpp
examples/ex2/: README.md
examples/ex2/doc/: doxygen.cfg
examples/ex2/src/: main.cpp  main.hpp
examples/ex3/: Makefile  README.md
examples/ex3/doc/: ex3.cfg  sample.bib
examples/ex3/src/: main.cpp  main.hpp
examples/ex4/: README.md
examples/ex4/src/step1/add_header/: CMakeLists.txt  main.cpp  main.hpp.in
examples/ex4/src/step1/basic/: CMakeLists.txt  main.cpp
examples/ex4/src/step2/add_library/: CMakeLists.txt
examples/ex4/src/step2/add_library/libraries/: CMakeLists.txt
examples/ex4/src/step3/install/: CMakeLists.txt  main.cpp
examples/ex4/src/step3/install/libraries/: CMakeLists.txt  math_functions.hpp
examples/ex4/src/step3/test/: CMakeLists.txt  main.cpp  main.hpp.in
examples/ex4/src/step3/test/libraries/: math_functions.cpp
examples/ex4/src/step4/introspect/: CMakeLists.txt  main.cpp  main.hpp.in
examples/ex5/: CMakeLists.txt  README.md
examples/ex5/cmake/: doxygen.cfg.in  functions.cmake
examples/ex5/doc/: CMakeLists.txt
examples/ex5/src/: CMakeLists.txt  Makefile  b.hpp  cmake_install.cmake  main.cpp  main.hpp.in
examples/ex5/src/math/: CMakeLists.txt  default_sqrt.cpp  default_sqrt.hpp
examples/ex5/src/printing/: print_a.hpp  print_ab.hpp
examples/ex6/: CMakeLists.txt  README.md
examples/ex6/cmake/: functions.cmake
examples/ex6/src/: main.cpp
examples/ex6/src/math/: CMakeLists.txt  math_functions.cpp  math_functions.hpp
examples/ex6/src/printing/: CMakeLists.txt
examples/ex7/: CMakeLists.txt  README.md
examples/ex7/cmake/: run_tests.cmake
examples/ex7/src/: main.cpp
examples/ex7/src/math/: CMakeLists.txt  math_functions.cpp  test_unit_default_sqrt.cpp
examples/ex7/src/printing/: CMakeLists.txt  print_a.cpp  print_ab.cpp
examples/ex_tmp/: README.md  run.sh
examples/ex_tmp/doc/: ex4.cfg
